fixing cards sizing overlap

--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -19,6 +19,7 @@
   .cards__wrapper {
     position: relative;
     margin: 50px 0 45px;
+    width: 1000px
   }
   
   .cards__items {
@@ -79,8 +80,8 @@
     display: block;
     width: 100%;
     max-width: 100%;
-    height: 100%;
-    max-height: 70%;
+    height: 70%;
+    max-height: 100%;
     object-fit: cover;
     transition: all 0.2s linear;
   }
@@ -97,12 +98,11 @@
     color: #252e48;
     font-size: 18px;
     line-height: 24px;
-    margin-top: 5px;
   }
   
   @media only screen and (min-width: 1200px) {
     .content__blog__container {
-      width: 84%;
+      width: 100%;
     }
   }
   
@@ -116,8 +116,14 @@
     .cards__item {
       margin-bottom: 2rem;
     }
-
-    .cards__item__text {
-        font-size: 12px;
+    .cards__wrapper {
+        width: 500px;
     }
+  }
+
+  @media only screen and ( max-width: 800px ) {
+      .cards__wrapper {
+          width: 350px;
+      }
+      
   }
